--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "postcss-short-var",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "PostCSS plugin to make CSS custom properties less verbose",
-  "keywords": ["postcss", "css", "postcss-plugin", "postcss-short-var"],
+  "keywords": [
+    "postcss",
+    "css",
+    "postcss-plugin",
+    "postcss-short-var"
+  ],
   "scripts": {
     "test": "jest --coverage && eslint ."
   },
@@ -30,7 +35,10 @@
       "node": true,
       "es6": true
     },
-    "extends": ["eslint:recommended", "plugin:jest/recommended"],
+    "extends": [
+      "eslint:recommended",
+      "plugin:jest/recommended"
+    ],
     "rules": {
       "jest/expect-expect": "off"
     }
